--- a/templates/actors/starship-sheet-full.html
+++ b/templates/actors/starship-sheet-full.html
@@ -181,7 +181,7 @@
                         <tr>
                             <td>{{localize "SFRPG.StarshipSheet.Header.PCU"}}</td>
                             <td>{{system.attributes.power.value}}</td>
-                            <td>{{system.attributes.hullPoints.max}}</td>
+                            <td>{{system.attributes.power.max}}</td>
                         </tr>
                         <tr>
                             <td>{{localize "SFRPG.StarshipSheet.Header.BHP"}}</td>
@@ -207,7 +207,7 @@
                         </tr>
                         <tr>
                             <td>{{localize "Price"}}</td>
-                            <td colspan="2">{{system.price.value}}</td>
+                            <td colspan="2">{{system.details.price.value}}</td>
 
                         </tr>
                     </tbody>
