--- a/templates/apps/d100Amodifier-app.html
+++ b/templates/apps/d100Amodifier-app.html
@@ -17,28 +17,14 @@
             
         </label>
     </div>
-  <!--
-    <div class="form-group modifier-type">
-        <label for="type">{{localize "SFRPG.ModifierTypeLabel"}}</label>
-        <select name="type" data-tippy-content="{{localize "SFRPG.ModifierTypeTooltip"}}">
-            {{#select modifier.type}}
-            {{#each config.modifierTypes as |type key|}}
-            <option value="{{key}}">{{type}}</option>
-            {{/each}}
-            {{/select}}
-        </select>
-    </div>
 
--->
     <div class="form-group modifier-effect-type">
         <label for="effectType">{{localize "SFRPG.ModifierEffectTypeLabel"}}</label>
-        <select name="effectType" data-tippy-content="{{localize "SFRPG.ModifierEffectTypeTooltip"}}">
-            {{#select modifier.effectType}}
-            {{#each d100Aconfig.modifierEffectTypes as |effect key|}}
-            <option value="{{key}}">{{effect}}</option>
-            {{/each}}
-            {{/select}}
+
+        <select name="effectType" data-tooltip="{{localize "SFRPG.ModifierEffectTypeTooltip"}}" >
+            {{ selectOptions d100Aconfig.modifierEffectTypes selected=modifier.effectType blank="" }}
         </select>
+
     </div>    
     <div class="form-group modifier-value-affected">
         <label for="valueAffected">{{localize "SFRPG.ModifierValueAffectedLabel"}}</label>
@@ -50,104 +36,69 @@
         <!--bottm of the liwst-->
         <input type="text" name="valueAffected" value="{{modifier.valueAffected}}" data-tippy-content="{{localize "SFRPG.ModifierValueAffectedTooltip"}}">
         {{else}}
-        <select name="valueAffected" data-tippy-content="{{localize "SFRPG.ModifierValueAffectedTooltip"}}">
-            
-            
-            {{#select modifier.valueAffected}}
-
+        
+        <select name="valueAffected" data-tooltip="{{localize "SFRPG.ModifierValueAffectedTooltip"}}" >
             {{#if (eq modifier.effectType "ac")}}
-            <option value=""></option>
-            <!--this should update immediatly but it does now-->
-            {{#each d100Aconfig.modifierResistanceAffectedValues as |resistance key|}}
-            <option value="{{key}}">{{resistance}}</option>
-            {{/each}}
-            
-            
+            {{ selectOptions d100Aconfig.modifierResistanceAffectedValues selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "hit-points")}}
-            {{#each d100Aconfig.modifierHitPointsAffectedValues as |hp key|}}
+            {{ selectOptions d100Aconfig.modifierHitPointsAffectedValues selected=modifier.valueAffected blank="" }}
 
-            <option value="{{key}}">{{hp}}</option>
-            {{/each}}
-            
             {{else if (eq modifier.effectType "initiative")}}
-            {{#each d100Aconfig.modifierActionCheckAffectedValues as |initBonusType key|}}
-            <option value="{{key}}">{{localize initBonusType}}</option>
-            {{/each}}
+            {{ selectOptions d100Aconfig.modifierActionCheckAffectedValues selected=modifier.valueAffected blank="" }}
 
-            
             {{else if (eq modifier.effectType "ability-skills")}}
-            {{#each config.abilities as |ability abl|}}
-            <option value="{{abl}}">{{ability}}</option>
-            {{/each}}
+            {{ selectOptions config.abilities selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "acp")}}
-            {{#each config.acpEffectingArmorType as |armorType key|}}
-            <option value="{{key}}">{{armorType}}</option>
-            {{/each}}
+            {{ selectOptions config.acpEffectingArmorType selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "save")}}
-            <option value="highest">{{localize "SFRPG.ModifierSaveHighest"}}</option>
-            <option value="lowest">{{localize "SFRPG.ModifierSaveLowest"}}</option>
-            {{#each config.saves as |save key|}}
-            <option value="{{key}}">{{save}}</option>
-            {{/each}}
+            {{ selectOptions config.saves selected=modifier.valueAffected blank="" }}
 
             {{else if (eq modifier.effectType "skill")}}
-            {{#each d100Aconfig.skills as |skill key|}}
-            <option value="{{key}}">{{localize skill}}</option>
-            {{/each}}
-
+            {{ selectOptions d100Aconfig.skills selected=modifier.valueAffected blank="" }}
 
             {{else if (eq modifier.effectType "skill-ranks")}}
-            {{#each config.skills as |skill key|}}
-            <option value="{{key}}">{{skill}}</option>
-            {{/each}}
-            {{else if (eq modifier.effectType "ability-check")}}
-            {{#each config.abilities as |ability abl|}}
-            <option value="{{abl}}">{{ability}}</option>
-            {{/each}}
+            {{ selectOptions d100Aconfig.skills selected=modifier.valueAffected blank="" }}
 
+            {{else if (eq modifier.effectType "ability-check")}}
+            {{ selectOptions config.abilities selected=modifier.valueAffected blank="" }}
 
             {{else if (eq modifier.effectType "ability-score")}}
-            {{#each d100Aconfig.abilities as |ability abl|}}
-            <option value="{{abl}}">{{localize ability}}</option>
-            {{/each}}
-          
+            {{ selectOptions config.abilities selected=modifier.valueAffected blank="" localize=true }}
 
             {{else if (eq modifier.effectType "weapon-attacks")}}
-            {{#each config.weaponTypes as |name key|}}
-            <option value="{{key}}">{{name}}</option>
-            {{/each}}
+            {{ selectOptions config.weaponTypes selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "weapon-property-attacks")}}
-            {{#each config.weaponProperties as |name key|}}
-            <option value="{{key}}">{{name}}</option>
-            {{/each}}
+            {{ selectOptions config.weaponProperties selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "weapon-damage")}}
-            {{#each config.weaponTypes as |name key|}}
-            <option value="{{key}}">{{name}}</option>
-            {{/each}}
+            {{ selectOptions config.weaponTypes selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "weapon-property-damage")}}
-            {{#each config.weaponProperties as |name key|}}
-            <option value="{{key}}">{{name}}</option>
-            {{/each}}
+            {{ selectOptions config.weaponProperties selected=modifier.valueAffected blank="" }}
+
             {{else if (eq modifier.effectType "specific-speed")}}
-            {{#each config.speeds as |speed key|}}
-            <option value="{{key}}">{{speed}}</option>
-            {{/each}}
+            {{ selectOptions config.speeds selected=modifier.valueAffected blank="" }}
+
             {{else}}
-            <option value=""></option>
+            
             {{/if}}
-            {{/select}}
+
         </select>
+        
+        
         {{/if}}
     </div>
     <div class="form-group modifier-modifier-type">
         <label for="modifierType">{{localize "SFRPG.ModifierModifierTypeLabel"}}</label>
-        <select name="modifierType" data-tippy-content="{{localize "SFRPG.ModifierModifierTypeTooltip"}}">
-            {{#select modifier.modifierType}}
-            {{#each config.modifierType as |type key|}}
-            <option value="{{key}}">{{type}}</option>
-            {{/each}}
-            {{/select}}
+
+        <select name="modifierType" data-tooltip="{{localize "SFRPG.ModifierModifierTypeTooltip"}}" >
+            {{ selectOptions config.modifierType selected=modifier.modifierType blank="" }}
         </select>
+
     </div>    
     <div class="form-group modifier-source">
         <label for="source">{{localize "SFRPG.ModifierSourceLabel"}}</label>
