--- a/templates/items/parts/item-armordetails.html
+++ b/templates/items/parts/item-armordetails.html
@@ -20,51 +20,25 @@
           {{!-- Weapon Source --}}
           <div class="form-group">
           <label>{{ localize "d100A.pubnSource" }}</label>
-          <select name="system.pubnsource">
-          {{#select itemData.pubnsource}}
-          {{#each d100Aconfig.pubnsource as |name type|}}
-          <option value="{{type}}">{{name}}</option>
-          {{/each}}
-          {{/select}}
+          <select name="system.attributes.pubnsource">
+            {{ selectOptions d100Aconfig.pubnsource selected=itemData.attributes.pubnsource blank="" }}
           </select>
            </div>
           
            {{!-- Weapon Manufacturer --}}
            <div class="form-group">
            <label>{{ localize "d100A.Items.manufacturer" }}</label>
-           <select name="system.manufacturer">
-           {{#select itemData.manufacturer}}
-           <option value=""></option>
-           {{#each d100Aconfig.manufacturers as |name type|}}
-           <option value="{{type}}">{{name}}</option>
-           {{/each}}
-           {{/select}}
-           </select>
+           <select name="system.attributes.manufacturer">
+            {{ selectOptions d100Aconfig.manufacturers selected=itemData.attributes.manufacturer blank="" }}
+          </select>
             </div>        
           
-<!--
-          {{!-- Equipment Type --}}
-          <div class="form-group">
-              <label>{{ localize "SFRPG.Items.Equipment.Category" }}</label>
-              <select name="system.armor.type">
-                  {{#select itemData.armor.type}}
-                  <option value=""></option>
-                  {{#each config.armorTypes as |name type|}}
-                  <option value="{{type}}">{{name}}</option>
-                  {{/each}}
-                  {{/select}}
-              </select>
-          </div>
--->
+
                 {{!-- Weapon Progress Level --}}
                 <div class="form-group">
                 <label>{{ localize "d100A.Items.Weapon.PL" }}</label>
                 <select name="system.progressLevel">
-                {{#select itemData.progressLevel}}
-                {{#each d100Aconfig.progressLevel as |name type|}}
-                <option value="{{type}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
+                  {{ selectOptions d100Aconfig.progressLevel selected=itemData.progressLevel blank="" }}
                 </select>
                 </div>
 
@@ -84,11 +58,7 @@
                 <div class="form-group" data-tooltip="{{localize 'd100A.availabilitytooltip' }}">
                 <label  >{{ localize "d100A.availability" }}</label>
                 <select name="system.availability">
-                {{#select itemData.availability}}
-                {{#each d100Aconfig.availability as |name type|}}
-                <option value="{{type}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
+                  {{ selectOptions d100Aconfig.availability selected=itemData.availability blank="" }}
                 </select>
                 </div>
 
@@ -117,12 +87,8 @@
           <div class="form-group">
                <label>{{ localize "d100A.skill" }}</label>
                <select name="system.skill">
-               {{#select itemData.skill}}
-               <option value=""></option>
-               {{#each d100Aconfig.skills as |name type|}}
-               <option value="{{type}}">{{name}}</option>
-               {{/each}}
-               {{/select}}
+                {{ selectOptions d100Aconfig.skills selected=itemData.skill blank="" }}
+              
                </select>
            </div>
 
@@ -142,11 +108,7 @@
 
                           <label>{{ localize "d100A.Items.Type" }}</label>
                           <select name="system.firepower">
-                          {{#select itemData.firepower}}
-                          {{#each d100Aconfig.firepower as |name type|}}
-                          <option value="{{type}}">{{name}}</option>
-                          {{/each}}
-                          {{/select}}
+                            {{ selectOptions d100Aconfig.firepower selected=itemData.firepower blank="" }}
                           </select>
                         </div>             
                         <hr>
@@ -202,7 +164,7 @@
 
 
     <br />
-
-    {{> "systems/Alternityd100/templates/items/parts/container-details.html" message="SFRPG.ItemSheet.Weapons.ContainerTooltip"}}
-
+<!--
+    [[> "systems/Alternityd100/templates/items/parts/container-details.html" message="SFRPG.ItemSheet.Weapons.ContainerTooltip"]]
+-->
 </div>
