--- a/templates/items/parts/item-capacity.html
+++ b/templates/items/parts/item-capacity.html
@@ -4,12 +4,7 @@
     <label>{{ localize "SFRPG.Items.Ammunition.AmmunitionType" }}</label>
     <div class="form-fields">
         <select name="system.ammunitionType">
-            {{#select itemData.ammunitionType}}
-            <option value="">{{ localize "SFRPG.Items.Ammunition.Type.None" }}</option>
-            {{#each config.ammunitionTypes as |ammunition type|}}
-            <option value="{{type}}">{{ammunition}}</option>
-            {{/each}}
-            {{/select}}
+            {{ selectOptions config.ammunitionTypes selected=itemData.ammunitionType blank="None" }}
         </select>
     </div>
 </div>
@@ -34,13 +29,10 @@
     <div class="form-fields">
         <input type="text" data-tippy-content="{{ localize "SFRPG.Items.Capacity.UsageTooltip" }}" name="system.usage.value" value="{{itemData.usage.value}}" data-dtype="Number" />
         <span class="sep"> / </span>
+ 
         <select name="system.usage.per" data-tippy-content="{{ localize "SFRPG.Items.Capacity.UsageValueTooltip" }}">
-        {{#select itemData.usage.per}}
-            <option value=""></option>
-            {{#each config.capacityUsagePer as |usage u|}}
-            <option value="{{u}}">{{usage}}</option>
-            {{/each}}
-        {{/select}}
+            {{ selectOptions config.capacityUsagePer selected=itemData.usage.per blank="" }}
         </select>
+        
     </div>
 </div>
